实现drop加端口

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>lsce</title>
+    <link rel="stylesheet" href="./static/jsplumb/css/jsplumbtoolkit-defaults.css">
+    <link rel="stylesheet" href="./static/jsplumb/css/main.css">
+    <link rel="stylesheet" href="./static/jsplumb/css/jsplumbtoolkit-demo.css">
+    <link rel="stylesheet" href="./static/jsplumb/css/demo.css">
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
